[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters-Sprite/3 Dude_Monster/Dude_Monster.png" type="Texture" id=1]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster.png" type="Texture" id=2]
[ext_resource path="res://Characters-Sprite/2 Owlet_Monster/Owlet_Monster.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Kaph-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menu_background.png" type="Texture" id=5]
[ext_resource path="res://UI/pickCharTest.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="pickCharTest" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -110.0
margin_right = -200.0
margin_bottom = -70.0
rect_scale = Vector2( 5, 5 )

[node name="OwletButton" type="Button" parent="VBoxContainer"]
margin_right = 44.0
margin_bottom = 40.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 3 )

[node name="PinkButton" type="Button" parent="VBoxContainer"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 40.0
icon = ExtResource( 2 )

[node name="DudeButton" type="Button" parent="VBoxContainer"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 40.0
icon = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -305.0
margin_top = 62.0
margin_right = 305.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "PICK A CHARACTER"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -153.5
margin_top = -62.0
margin_right = 153.5
margin_bottom = -38.0
custom_fonts/font = SubResource( 2 )
text = "this is for test only"

[connection signal="pressed" from="VBoxContainer/OwletButton" to="." method="_on_OwletButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PinkButton" to="." method="_on_PinkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DudeButton" to="." method="_on_DudeButton_pressed"]
